Fix T54319: Crash after double-clicking baked F-curve